# orbit-mail-client

./: README.md  package-lock.json  package.json
docs/: BUILD-STATUS.md  PRODUCT-DRAFT.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: set_setting.rs
src-tauri/src/: error.rs  events.rs  lib.rs  search.rs  secrets.rs  state.rs
src-tauri/src/ai/: audit.rs  mod.rs  openai.rs  provider.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs
src-tauri/src/graph/: mod.rs
src-tauri/src/loops/: briefing.rs  mod.rs  rules.rs
src-tauri/src/models/: mod.rs
src-tauri/src/sync/: discovery.rs  imap.rs  ingest.rs  mod.rs  oauth.rs  runner.rs
src/components/: AddAccountForm.tsx  Briefing.tsx  CommandPalette.tsx  DraftReply.tsx  LoopList.tsx  SettingsPanel.tsx
src/lib/: ipc.ts
