[package]
name = "orbit"
version = "0.1.0"
description = "Orbit — a local-first Communication OS"
authors = ["Orbit"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't conflict with the
# bin name on Windows (see rust-lang/cargo#8519).
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core
thiserror = "2"
# SQLite is compiled into the binary (bundled) so the user installs nothing extra.
rusqlite = { version = "0.32", features = ["bundled"] }
# Async runtime for background sync + AI streaming.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
log = "0.4"
async-trait = "0.1"
futures = "0.3"
# IMAP client (async) + RFC 822 parsing. Streaming-friendly, fits "events from day one".
# Both default to async-std; we drive them on the same tokio runtime as the rest
# of the app, so select the tokio runtime explicitly.
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.11"
# Credentials live in the OS keychain, never in SQLite (spec §7).
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
# HTTP client for AI providers (OpenAI-compatible, streamed) and OAuth token
# exchange. Reuses the system TLS stack (SChannel on Windows) via native-tls.
reqwest = { version = "0.12", features = ["json", "stream"] }
# OAuth 2.0 PKCE (RFC 7636) for Gmail / M365: CSPRNG verifier, SHA-256 challenge,
# base64url encoding. These are the canonical primitives; no stdlib equivalent.
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
# Used by loop-rule unit tests to build fixture databases in-memory.
tempfile = "3"
